@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.38 2003-03-06 23:25:57 karl Exp $
+$Id: NEWS,v 1.39 2003-03-07 19:22:07 karl Exp $
 This file records noteworthy changes.
 
   Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
@@ -22,6 +22,8 @@ convenience, here's a url to one of the relevant sections:
 
 -------------------------------------------------------------------------------
 
+* Language:
+  . new command @/ specifies an allowable breakpoint within a line.
 * makeinfo:
   . search for image files in the include file search path.
   . under --html, @cartouche now outputs a <table> with a border.
